[package]
name = "psqlgen"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
sqlparser = { path = "sqlparser-rs/" }
log = "*"
thiserror = "1"
either = "1.5"
chrono = "0.4"
convert_case = "0.4"
prettytable-rs = "0.8"
